src/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');

$violet: #5964E0;
$lightViolet: #939BF4;
$darkBlue: #19202D;
$midnight: #121721;
$darkGray: #6E8098;
$gray: #9DAEC2;
$lightGray: #F4F6F8;
$white: #FFFFFF;

* {
    font-family: 'Kumbh Sans', sans-serif;
}

body {
    margin: 0;
}
  
body:not(.dark-mode-preloading) {
    transition: all 0.3s linear;
}

body.dark-mode {
    background-color: $midnight;
    color: $white;
}

body.light-mode {
    background-color: $white;
    color: $midnight;
}

h1 {
    font-size: 28px;
    font-weight: bold;
}

h2 {
    font-size: 24px;
    font-weight: bold;
}

h3 {
    font-size: 20px;
    font-weight: bold;
}

h4 {
    font-size: 14px;
    font-weight: bold;
}

p, span {
    font-size: 16px;
}

